# cretris

./: CMakeLists.txt  README.md
scripts/: install_deps.sh
src/: main.cpp
src/core/: Game.cpp  Game.h  Tetromino.cpp  Tetromino.h
src/frontend/: Frontend.h
src/frontend/ncurses/: NcursesFrontend.cpp  NcursesFrontend.h
src/frontend/sdl/: AudioEngine.cpp  AudioEngine.h  SdlFrontend.cpp  SdlFrontend.h
